Fix z-index for floating button (was above loading screen)

--- a/front/style.scss
+++ b/front/style.scss
@@ -103,7 +103,7 @@ input[type=range]{
 
   width: 38px;
   height: 38px;
-  z-index: 10000;
+  z-index: 2000;
 
   transition: opacity 200ms;
 
@@ -205,7 +205,7 @@ a {
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 1000;
+  z-index: 5000;
 
   .loading-message {
     flex: 1;
@@ -283,7 +283,7 @@ a {
   position: absolute;
   right: 0px;
   top: 1px;
-  z-index: 1000;
+  z-index: 800;
 
   overflow: hidden;
   text-align: right;
